--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
-.container{
-    max-width: 2000px;
+.height{
     height: 750px;
+}
+.container-header{
+    max-width: 2000px;
     margin: 0 auto;
     background-color: aqua;
     flex-wrap: wrap;
@@ -21,36 +23,59 @@
     height: 32px;
     justify-content: space-between;
     background-color: rgb(78, 219, 39);
-    border: 2px solid black ;
-    align-items: center;
-   
-   
-    
+    border: 2px dashed black ;
+    align-items: center;    
 }
-.col-25{
+
+.col-logo{
   padding-left: 5px;
   
   
 } 
-.col-50{
-    
-    
-}
-.col-75{
+
+.col-login{
     padding-right: 5px;
     
 }
 
-.content{
-    justify-content: center;
-}
 ul{
     display: flex;
     justify-content: space-around;
-    list-style-type: none;
-    
+    list-style-type: none; 
 }
+
 li{
     margin: 0 10px;
+}
+
+.container-main1{
+    max-width: 2000px;
+    height: 350px;
+    margin: 0 auto;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0px;
     
+}
+.row1{
+    width: calc(80% - 500px);
+    background-color: rgb(219, 39, 159);
+    border: 2px dashed black;
+    
+}
+.container-main2{
+    max-width: 2000px;
+    height: 350px;
+    margin: 0 auto;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0px;
+    
+}
+.row2{
+    width: calc(80% - 500px);
+    background-color: rgb(219, 39, 159);
+    border: 2px dashed black;
 }
