--- a/css/style.css
+++ b/css/style.css
@@ -22,20 +22,39 @@
     height: 32px;
     justify-content: space-between;
     background-color: rgb(78, 219, 39);
-    border: 2px dashed black ;
-    align-items: center;    
+       
 }
 
-.col-logo{
-  padding-left: 5px;
-  
-  
-  
-  
+.col-logo1{
+    display: flex;
+    padding-left: 5px;
+    border: 2px dashed black;
+    width: 25%;
+    height: 100%;
+    align-items: center; 
+
 } 
 
 .col-login{
+    display: flex;
     padding-right: 5px;
+    padding-left: 5px;
+    border: 2px dashed black;
+    width: 25%;
+    height: 100%;
+    align-items: center; 
+    justify-content: end;
+    
+}
+.col-link{
+    display: flex;
+    border: 2px dashed black;
+    width: 50%;
+    height: 100%;
+    align-items: center; 
+    justify-content: center;
+
+    
     
 }
 
@@ -43,6 +62,7 @@ ul{
     display: flex;
     justify-content: space-around;
     list-style-type: none; 
+    
 }
 
 li{
@@ -124,5 +144,62 @@ li{
     border: 2px dashed black;
     
 }
+.container-footer1{
+    max-width: 2000px;
+    height: 450px;
+    margin: 0 auto;
+    background-color: rgb(63, 63, 63);
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 25px;
+    
+}
+.row6{
+    display: flex;
+    width: calc(100% - 500px);
+    
 
+    
+   
+}
+.column1{
+    width: 32%;
+    background-color: rgb(255, 0, 72);
+    border: 2px dashed black;
+}
+.column2{
+    width: 17%;
+    background-color: rgb(47, 217, 166);
+    border: 2px dashed white;
+}
+hr{
+    color: white;
+}
+.container-footer2{
+    max-width: 2000px;
+    margin: 0 auto;
+    background-color: rgb(63, 63, 63);
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0px;
 
+}
+.row7{
+    display: flex;
+    width: calc(100% - 500px);
+    height: 32px;
+    justify-content: space-between;
+    background-color: rgb(39, 210, 219);
+    align-items: center; 
+    padding: 30px 0;  
+
+}
+.col-logo2, .col-bottone{
+    border: 2px dashed black;
+    background-color: pink;
+    width: 60px;
+    height: 25px;
+    text-align: center;
+}
